Add copyright section

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ a {
 
 .secondary-text {
   font-size: 18px;
+  font-weight: 400;
   color: #E1E3E9;
 }
 
@@ -191,4 +192,11 @@ a {
   border: 2px solid #E5E7EB;
   width: 140px;
   height: 35px;
+}
+
+.copyright-section {
+  padding: 30px 0;
+
+  background-color: #1F2937;
+  text-align: center;
 }
